--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,8 @@ body{
 }
 
 .banner-container .banner-circle{
-  width: 80%;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 .banner-container .microphone{
@@ -109,6 +110,88 @@ body{
   color: white;
 }
 
+/* why choose section */
+.why-choose{
+  background-color: #230E3D;
+  max-width: 1600px;
+  margin: 0 auto;
+  
+    
+}
+
+.card-container{
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 200px);
+  /* width: 100%;
+  height: 100%; */
+  
+  padding: 1.25rem;
+  
+}
+.audio{  
+  grid-row: span 2;
+  background-color: rgba(53, 17, 101, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  align-items: center;
+  
+}
+.interview{
+  grid-column: span 2;
+  background-color: rgba(53, 17, 101, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  align-items: center;
+}
+.device{
+  grid-column: span 2;
+  background-color: rgba(53, 17, 101, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  align-items: center;
+}
+.community{
+  grid-column: span 2;
+  background-color: rgba(53, 17, 101, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  align-items: center;
+}
+.resources{
+  grid-column: span 1;
+  background-color: rgba(53, 17, 101, 0.4);
+  border-radius: 30px;
+  padding: 30px 20px;
+  align-items: center;
+}
+
+/* Meet tha Host styles */
+.meet-host{
+  background-color: #1A0B2E;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.section-descriotion{
+  display: flex;
+  background-color: rgba(53, 17, 101, 0.4);
+  max-width: 1200px;
+  margin: 0 auto;
+  border-radius: 30px;
+  /* padding: 20px; */
+  align-items: center;
+}
+.section-descriotion .host-image{
+  width: 70%;
+  padding-left: 2rem;
+
+}
+
+.social-link{
+  display: flex;
+  gap: 10px;
+}
 
 
 @media screen and (max-width: 576px) {
